# yq-vulqan

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  changelog.md  configure.cmake  vulqan.cfg.in
api/: CMakeLists.txt  MyImGui.hpp  YqEngineConfig.cpp
api/3rd/: CMakeLists.txt
api/3rd/ImGuiFileDialog/: ImGuiFileDialog.cpp
api/3rd/imgui/: imgui_draw.cpp
api/asset/: NullCamera.hpp  NullCamera.ipp  Quadrilateral.hpp  Quadrilateral.ipp  SpaceCamera.hpp  SpaceCamera.ipp  SpaceManipulator.ipp  TargetCamera.hpp  TargetCamera.ipp  Tetrahedron.hpp  Tetrahedron.ipp  Triangle.hpp  Triangle.ipp  asset.cpp
api/data/: ColorVertex2D.hpp  ColorVertex3D.hpp  ColorVertexData.hpp
api/engine/: AppCreateInfo.hpp  Application.hpp  Application.ipp  Asset.cpp  AssetCache.hpp  CMakeLists.txt  Camera.hpp  Editor.ipp  Manipulator.hpp  Manipulator.ipp  PaintDevice.hpp  Perspective.hpp  Pixmap1.hpp  Pixmap2.hpp  Pixmap3.hpp  Scene.hpp  Shader.cpp  Shader.hpp  SimData.hpp  SimEngine.hpp  Surface.hpp  Texture.hpp  Tool.ipp  Undo.hpp  Undo.ipp  Viewer.cpp  Viewer.hpp  ViewerCreateInfo.hpp  Visualizer.hpp  Widget.ipp  engine.cpp  preamble.hpp
api/engine/enum/: BorderColor.hpp  ColorComponent.hpp  ComponentSwizzle.hpp  CullMode.hpp  DataActivity.hpp  DataFormat.hpp  DescriptorType.hpp  FilterType.hpp  FrontFace.hpp  ImageLayout.hpp  ImageTiling.hpp  ImageType.hpp  IndexType.hpp  LogicOp.hpp  MipmapMode.hpp  PolygonMode.hpp  PresentMode.hpp  PushConfigType.hpp  Required.hpp  SamplerAddressMode.hpp  SamplerMipmapMode.hpp  ShaderType.hpp  StencilOp.hpp  SubpassContents.hpp  SystemAllocationScope.hpp  Topology.hpp  Tristate.hpp  VertexInputRate.hpp
api/engine/render/: BufferObjectInfo.hpp  BufferObjectInfo.ipp  IndexBufferObjectInfo.hpp  Pipeline.cpp  Pipeline.hpp  PipelineBuilder.hpp  PipelineBuilder.ipp  PipelineConfig.hpp  PipelineConfig.ipp  PipelineUtils.hpp  PipelineUtils.ipp  PushBufferObjectInfo.hpp  PushData.hpp  Render3D.cpp  Render3D.hpp  RenderWriter.hpp  Rendered.cpp  Rendered.hpp  StdPushConstant.hpp  UniformBufferObjectInfo.hpp  VertexBufferObjectInfo.hpp
api/engine/vulqan/: VqBuffer.hpp  VqBuffer.ipp  VqCommand.ipp  VqException.hpp  VqJoystick.hpp  VqMonitor.hpp  VqMonitor.ipp  VqPipeline.cpp  VqPipeline.hpp  VqUtils.hpp  VqUtils.ipp
api/tachyon/: AppCreateInfo.hpp  AppGLFW.hpp  AppGLFW.ipp  Application.hpp  Application.ipp  Asset.cpp  Asset.hpp  Asset.ipp  AssetCache.hpp  AssetCache.ipp  AssetFactory.hpp  AssetFactory.ipp  AssetInfoWriter.hpp  Buffer.hpp  Buffer.ipp  BufferArray.hpp  BufferCopy.hpp  BufferObject.hpp  BufferObject.ipp  BufferSpan.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Camera.ipp  CameraInfoWriter.hpp  Event.hpp  ImGuiAdapter.cpp  ImGuiDemoWidget.ipp  ImGuiGLFW.hpp  Image.hpp  Image.ipp  ImageInfo.hpp  ImageViewInfo.hpp  Joystick.ipp  Logging.hpp  Manager.cpp  Memory.hpp  Memory.ipp  Monitor.hpp  Monitor.ipp  (+77 more)
api/vulqan/: VqStructs.hpp  errors.hpp  preamble.hpp  structgen.py  vulqan.cpp
api/widget/: TextArea.cpp  TextArea.hpp
api/yq/: CMakeLists.txt
api/yq-vulqan/: CMakeLists.txt  errors.hpp  keywords.hpp  logging.hpp  strings.cpp  strings.hpp  stub.cpp
exe/: CMakeLists.txt
exe/gamevk/: CMakeLists.txt  main.cpp
exe/gltf/: CMakeLists.txt  GLTFTree.cpp  GLTFTree.hpp  GLTFWin.cpp  GLTFWin.hpp
exe/gltfedit/: CMakeLists.txt  GLTFTree.cpp  GLTFTree.hpp  GLTFWin.cpp  GLTFWin.hpp  main.cpp
exe/luavk/: CMakeLists.txt  LuaPanel.cpp  LuaPanel.hpp  LuaWin.cpp  LuaWin.hpp  main.cpp
exe/sce/: CMakeLists.txt  SCEApp.cpp  SCEApp.hpp  SCEDoc.cpp  SCEDoc.hpp  SCEEditor.cpp  SCEEditor.hpp  SCEMain.cpp  SCEMain.hpp  SCEProject.cpp  SCEProject.hpp  SCEViewer.cpp  SCEViewer.hpp  main.cpp
exe/scedit/: CMakeLists.txt  SceneApp.cpp  SceneApp.hpp  SceneEditor.hpp  main.cpp
exe/scenery/: CMakeLists.txt  CameraAddMenuUI.cpp  CameraAddMenuUI.hpp  CameraEntry.hpp  CameraTableUI.cpp  CameraTableUI.hpp  ControlPanelUI.cpp  ControlPanelUI.hpp  InspectorUI.cpp  InspectorUI.hpp  LightAddMenuUI.cpp  LightAddMenuUI.hpp  LightTableUI.cpp  LightTableUI.hpp  LuaPanelUI.cpp  LuaPanelUI.hpp  MainWidget.cpp  MainWidget.hpp  MetricsUI.cpp  MetricsUI.hpp  ModelSelectEvent.cpp  ModelSelectEvent.hpp  ModelTableUI.cpp  ModelTableUI.hpp  RenderedAddMenuUI.cpp  RenderedAddMenuUI.hpp  RenderedEntry.hpp  RenderedSelectEvent.hpp  RenderedTableUI.cpp  RenderedTableUI.hpp  SceneAddMenuUI.cpp  SceneAddMenuUI.hpp  SceneApp.cpp  SceneApp.hpp  SceneEditor.cpp  SceneEditor.hpp  SceneEntry.hpp  ScenePane.cpp  ScenePane.hpp  SceneTableUI.cpp  (+14 more)
exe/xgqt/: AppWindow.cpp  AppWindow.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
exe/xgvk/: CMakeLists.txt  PalettePanel.cpp  PalettePanel.hpp  ViewPanel.cpp  ViewPanel.hpp  XGWin.cpp  XGWin.hpp  main.cpp
lib/tachyon/: CMakeLists.txt
sdk/: CMakeLists.txt
sdk/asteroids/: CMakeLists.txt  asteroids.cpp
sdk/bigempty/: CMakeLists.txt  bigempty.cpp
sdk/camera/: CMakeLists.txt  CameraController.cpp  CameraController.hpp  CameraScene.cpp  CameraScene.hpp  CameraWidget.cpp  MainWidget.cpp  MainWidget.hpp  SpaceCameraRemote.cpp  SpaceCameraRemote.hpp  camera.cpp  main.cpp
sdk/hello/: CMakeLists.txt  hello.cpp  types.hpp
sdk/imdemo/: CMakeLists.txt  imdemo.cpp
sdk/rocks/: CMakeLists.txt  MainWidget.cpp  MainWidget.hpp  RockApp.cpp  RockApp.hpp  asteroids.cpp  rocks.cpp
sdk/scenery/: CMakeLists.txt  SceneEditor.cpp  SceneEditor.hpp  SceneryMW.cpp  SceneryMW.hpp  main.cpp
sdk/textking/: CMakeLists.txt  textking.cpp
test/: CMakeLists.txt  memory.cpp  shader_load.cpp  task_engine.cpp  tsxfile.cpp
tool/: CMakeLists.txt  fontinfo.cpp  glfw_joysticks.cpp  glfw_monitors.cpp  luavk.cpp  recode.cpp  res.cpp  resinfo.cpp  shcompile.cpp  shexpand.cpp  vk_devices.cpp  vk_extensions.cpp  vk_layers.cpp  vk_queues.cpp  vx_structures.cpp
tool/gltf/: GLTFTree.hpp  GLTFWin.cpp
vulqan/: CMakeLists.txt
vulqan/3rd/: CMakeLists.txt
vulqan/api/: CMakeLists.txt  MyImGui.cpp  MyImGui.hpp  YqEngineConfig.hpp
vulqan/sdk/: CMakeLists.txt  readme.md
vulqan/tool/: glfw_joysticks.cpp  glfw_monitors.cpp  vk_layers.cpp
(+12470 files in other folders)
