################################################################################
##
##  YOUR QUILL
##
################################################################################

add_subdirectory(3rd)

set(VULQAN_API_DIR ${CMAKE_CURRENT_LIST_DIR})
set(VULQAN_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})

add_subdirectory(yq)

