################################################################################
##
##  YOUR QUILL
##
################################################################################

add_subdirectory(bigempty)
add_subdirectory(hello)
add_subdirectory(imdemo)
add_subdirectory(camera) 
add_subdirectory(textking)
add_subdirectory(scenery)
if(EXISTS composite)
    #add_subdirectory(composite)
endif()

