################################################################################
##
##  YOUR QUILL
##
################################################################################

add_subdirectory(bigempty)
add_subdirectory(hello)
add_subdirectory(imdemo)
add_subdirectory(camera) 
add_subdirectory(scenery)
add_subdirectory(textking)
if(EXISTS composite)
    #add_subdirectory(composite)
endif()

